chamber/css/medium.css
@media (min-width: 40em) {

    h2 {
        font-size: 2em;
    }
    p {
        font-size: 1.5em;
    }

    /* header Content */
    header {
        justify-content: center;
    }

    /* */
    .name-and-logo h1 {
        font-size: 2.5em;
    }
    .name-and-logo span {
        font-size: 60%;
    }
    .header-logo {
        max-width: 8em;
    }

    /* Navigation */ 
    nav ul {
        grid-column: 1/2;
        margin-left: 5em;
        display: flex;
    }
    nav li {
        padding: 1em;
    }
    .navigation a {
        font-size: 1.5em;
    }
    .social-media {
        margin-top: 4em;
        grid-column: 2/3;
    }
    .menu-button {
        margin-top: 1em;
        grid-column: 3/4;
    }
    .social-media img{
        max-width: 2.5em;
    }

    /* main content */

    main#portal {
        display: grid;
        grid-template-columns: 1fr .7fr;
    }
    .name-and-call {
        grid-row: 1/2;
        grid-column: 1/3;
        text-align: center;
        min-height: 15em;
    }
    .name-and-call h2 {
        font-size: 2em;
    }
    .news {
        grid-row: 2/3;
        grid-column: 1/3;
    }
    .news p {
        padding-top: 1em;
    }
    .spotlights {
        grid-row: 3/4;
        grid-column: 1/3;
    }
    .spotlight img {
        padding: 1em;
    }
    .join {
        grid-row: 4/5;
        grid-column: 1/3;
    }
    .join a {
        display: inline-block;
        text-decoration: none;
        outline-style: solid;
        outline-color: rgb(0, 126, 78);
        padding: .2em;
        margin: 1em;
        border-radius: 1em;
        color: rgb(0, 126, 78);
        font-size: 2em;
        transition: outline 1s ease, color .4s ease;
    }
    .join a:hover {
        color: rgb(0, 255, 157);
        outline-color: rgb(0, 255, 157);
    }
    .event {
        grid-row: 5/6;
        grid-column: 1/2;
    }
    .event a:hover {
        color: rgb(0, 255, 157);
        outline-color: rgb(0, 255, 157);
    }
    .weather {
        grid-row: 5/6;
        grid-column: 2/3;
    }

    /* footer content */

    /* Footer grid content */
    .footer-logo{
        grid-column: 1/2;
        margin-left: 20%;
    }
    .address-info {
        grid-column: 2/3;
    }
    .contact-info{
        grid-column: 3/4;
    }
    .site-info {
        grid-column: 1/4;
        text-align: center;
        margin: 1%;
    }
    /* Site Info content */
    .site-info hr {
        padding: .1%;
        background-color: rgba(255, 255, 255, 0.123);
        border-color: rgba(255, 255, 255, 0.212);
        border-radius: 5%;
    }
    .site-info p {
        margin-top: 1%;
        color: rgb(0, 75, 46);
    }

    /* Discover content */
    main#discover picture {
        filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0));
        transition: filter 1s ease;
    }
    main#discover picture:hover {
        filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.685));
    }
    .img-t-load {
        filter: brightness(1);
        transition: filter 1s ease;
    }
    main#discover picture:hover .img-t-load, main#thanks picture:hover .img-t-load {
        filter: brightness(.4);
    }
    .text-t-load {
        bottom: auto;
        top: -10em;
        transition: top .5s ease;
        background-color: rgba(0, 0, 0, 0);
        border-bottom-right-radius: 0;
        border-bottom-left-radius: 0;
    }
    main#discover picture:hover .text-t-load, main#thanks picture:hover .text-t-load {
        top:3em;
    }
    .text-t-load>p>a {
        box-shadow: -1px 1px 33px 1px rgba(0, 0, 0, 0);
        background-color: rgba(0, 0, 0, 0);
        transition: box-shadow .5s ease, background-color .5s ease;
    }
    .text-t-load>p>a:hover {
        box-shadow: -1px 1px 33px 1px rgba(0, 0, 0, 0.74);
        background-color: rgba(0, 0, 0, 0.418);
    }


    /* Directory Content */
    .card-list {
        font-size: 1em;
    }
    .cards-grid {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }

    /* Thank you Content*/
    .application-form > fieldset > label, #contact-form > fieldset > label {
        font-size: 1.5em;
    }
    .submit-btn {
        padding: .4em;
        font-size: 1.5em;
    }

    /* Contact Thanks Content*/
    main#contact-thanks {
        background-position-x: 0;
    }
}

